// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rss 2.0 should generate a valid feed 1`] = `
"<rss version=\\"2.0\\">
    <channel>
        <item>
            <title>Hello World</title>
            <url>https://example.com/hello-world?link=sanitized&amp;value=2</url>
            <links>
                <title>My Link</title>
                <url>https://example.com/hello-world?link=sanitized&amp;value=2</url>
            </links>
        </item>
    </channel>
</rss>"
`;

exports[`rss 2.0 should generate a valid feed 2`] = `
"<rss version=\\"2.0\\">
    <channel>
        <item>
            <title>Hello World</title>
            <url>https://example.com/hello-world?link=sanitized&amp;value=2</url>
            <links>
                <title>My Link</title>
                <url>https://example.com/hello-world?link=sanitized&amp;value=2</url>
            </links>
        </item>
        <item>
            <title>Hello World</title>
            <id>https://example.com/hello-world2</id>
            <url>https://example.com/hello-world2</url>
            <links>
                <title>My Link</title>
                <id>https://example.com/hello-world2</id>
                <url>https://example.com/hello-world2</url>
            </links>
        </item>
    </channel>
</rss>"
`;
